--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ngure's Portfolio</title>
-  <link rel="stylesheet" href="/Templates/styles.css" />
-  <script src="/Templates/scripts.js" defer></script>
+  <link rel="stylesheet" href="/styles.css" />
+  <script src="/scripts.js" defer></script>
 </head>
 <body>
 
