--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <header>
       <nav>
-        <div class="logo"><img src="/Images/logo.png" alt="About Me"></div>
+        <div class="logo"><img src="Images/logo.png" alt="About Me"></div>
         <ul class="nav-links">
           <li><a href="#hero">Home</a></li>
           <li><a href="#about">About</a></li>
