--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
       <div class="container">
         <h2>Certifications</h2>
         <ul>
-          <li>Deep Learning Specialization - Coursera</li>
-          <li>Data Science Professional - IBM</li>
-          <li>IoT for Beginners - Microsoft</li>
+          <li>Deep Learning With CNN</li>
+          <li>Applied Data Science </li>
+          <li>Data Science Tutorials-point</li>
         </ul>
       </div>
     </section>
@@ -228,7 +228,7 @@
     <section id="contact" class="contact">
       <div class="container">
         <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:alvinmainangure@gmail.com">alvinmainangure@gmail.com</a></p>
+        <p>Email: <a href="mailto:alvinmainangure@gmail.com">alvinngure17@gmail.com</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/alvin-maina-7531aa316/" target="_blank">alvin-maina</a></p>
         <p>GitHub: <a href="https://github.com/ngure17" target="_blank">ngure17</a></p>
       </div>
