--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="" alt="About Me">
+                        <img src="Images/muruthi-profile.jpg" alt="About Me">
                     </div>
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
