--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
   <title>Ngure's Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="scripts.js" defer></script>
+  <style>
+    .about-col-1 {
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding: 10px;
+    }
+    
+    .about-col-1 img {
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
+        object-fit: cover;
+        border: 4px solid #00bcd4;
+        margin: 0;
+    }
+  </style>
+
 </head>
 <body>
 
