--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <p class="subtitle">Data Scientist • IoT Developer • Full Stack Web Dev • AI Engineer</p>
     <div class="hero-buttons">
       <a href="#projects" class="btn">View My Work</a>
-      <a href="https://drive.google.com/file/d/1Za2KHsrsWeWsgRWx6upfB_6G96UNwmPI/view" target="_blank">View My CV</a>
+      <a href="https://drive.google.com/file/d/1Za2KHsrsWeWsgRWx6upfB_6G96UNwmPI/view" target="_blank" class="btn">View My CV</a>
     </div>
   </div>
     </section>
